# devilutionX

./: .gitignore  CMakeLists.txt
CHEditor/: CMakeLists.txt  cheditor.cpp
CMake/: FindSDL2_image.cmake
ChrEditor/: CMakeLists.txt  chreditor.cpp
SVViewer/: CMakeLists.txt  svviewer.cpp
